Dummy code to debug dispatch APT